monticore-generator/src/test/resources/cocos/invalid/A4031/A4031a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4031;

grammar A4031a {
  a = "a";

}
